--- a/AEM7130_HW1.ipynb
+++ b/AEM7130_HW1.ipynb
@@ -15,7 +15,7 @@
     "## Problem 1: Coding, integration, and a simple econ example\n",
     "A profit-maximizing firm faces a demand curve given by: $P(q) = a-bq$ where $b\\sim logN(\\mu,\\sigma)$ and has a cost function given by $C(q) = cq$. \n",
     "\n",
-    "1. Solve for the optimal quantity analytically. Write your proof in the notebook using markdown.\n",
+    "$\\text{1.}$ Solve for the optimal quantity analytically. Write your proof in the notebook using markdown.\n",
     "\n",
     "$\\pi(q) = P(q)\\cdot q - C(q) = (a - bq)\\cdot q - cq \\ \\ \\Rightarrow \\ E[\\pi(q)] = (a - E[b]q)\\cdot q - cq$\n",
     "\n",
@@ -25,7 +25,7 @@
     "Therefore, $q^* = \\frac{a - c}{2E[b]}$ where $E[b] = e^{\\mu +\\sigma^2/2}$\n",
     "\n",
     "\n",
-    "2. Write a function called `profit_max_q(a, c, mu, sigma, method, n)` that returns the numerical optimal quantity given a set of inputs $(a, c, \\mu, \\sigma, method, n)$, where `method` is a string that takes on a value of `\"mc\"` or `\"quad\"` and determines whether you integrate using Monte Carlo or quadrature methods, and `n` is the number of Monte Carlo draws or quadrature nodes.\n"
+    "$\\text{2.}$ Write a function called `profit_max_q(a, c, mu, sigma, method, n)` that returns the numerical optimal quantity given a set of inputs $(a, c, \\mu, \\sigma, method, n)$, where `method` is a string that takes on a value of `\"mc\"` or `\"quad\"` and determines whether you integrate using Monte Carlo or quadrature methods, and `n` is the number of Monte Carlo draws or quadrature nodes.\n"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Choose a set of values $(a, c, \\mu, \\sigma)$ and use `profit_max_q` to solve the problem for both approaches to integration. Use the `CompEcon` package to implement the quadrature routine."
+    "$\\text{3.}$ Choose a set of values $(a, c, \\mu, \\sigma)$ and use `profit_max_q` to solve the problem for both approaches to integration. Use the `CompEcon` package to implement the quadrature routine."
    ]
   },
   {
@@ -319,8 +319,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Call `exp_cols(x)` and `exp_rows(x)` twice and calculate the elapsed time on the second call (avoids fixed cost of initial compiliation).\n",
-    "5. Is one faster than the other?"
+    "$\\text{4.}$  Call `exp_cols(x)` and `exp_rows(x)` twice and calculate the elapsed time on the second call (avoids fixed cost of initial compiliation).\n",
+    "\n",
+    "$\\text{5.}$  Is one faster than the other?"
    ]
   },
   {
